Changelog
=========

2.0.3 (unreleased)
------------------

- URLNormalizer should remove all ignored characters before making any 
  substitutions.
  [esteele]

- Added three new countries and its corresponding flags. Also updated
  the internet top level domains list. Added countries are Kosovo,
  Montenegro and Serbia.
  [alecghica]

2.0.2 (2012-08-29)
------------------

- Avoid infinite loop if buggy queryUtility() returns normalizer instance
  of wrong class. Fixes http://dev.plone.org/ticket/11630.
  [patch by Sardtok, applied by kleist]


2.0.1 (2012-07-02)
------------------

- Use `zope.browserresource`.
  [hannosch]

- Converted most tests from doctests to proper unit tests.
  [hannosch]

- Fixed various native names of African languages. Added ``nd``, ``nr`` and
  ``ve`` language codes. Thanks to Dwayne Bailey and Roche Compaan.
  [hannosch]

- The max_length argument was ignored by
  plone.i18n.normalizer.ja.Normalizer.
  [rossp]

2.0 - 2010-07-18
----------------

- Use the standard libraries doctest module.
  [hannosch]

- Update license to GPL version 2 only.
  [hannosch]

1.1b1 - 2010-01-24
------------------

- In practice the Unidecode data didn't produce good enough results for various
  languages. We therefor limit the transliteration approach again to latin-like
  languages and introduce a UNIDECODE_LIMIT. This closes
  http://dev.plone.org/plone/ticket/10107.
  [hannosch]

1.1a3 - 2009-12-27
------------------

- Use the flag of Bangladesh for the Bengali language (code: bn) in general
  and not only for the ``bn-bd`` variant. This closes
  http://dev.plone.org/plone/ticket/9950.
  [hannosch]

- Fixed the IIDNormalizer to generate valid CSS ID or Python variable names as
  specified in its docstring. It no longer tries to preserve filename
  extensions. This closes http://dev.plone.org/plone/ticket/9708.
  [hannosch]

- Added a new explicit base normalizer for Thai, as the Unidecode based
  transliteration isn't good enough.
  [hannosch]
